--- a/index.html
+++ b/index.html
@@ -31,28 +31,30 @@
       <main id="projects">
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
+          <p class="description"> If you are confused on what you want to do after highschool, check this out.
+             <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">pizza recipes</a> I am sure this can help.</p>
+          <h2>Medium Blog Post</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
+          <p class="mins">10 min read</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            My blog post written on the important of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
+          <p class="description"> Should we really listen to movie critics?
+            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">pizza recipes</a> Lets explore that idea here.</p>
+          <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            Group podcast project that incorporates a gameshow discussing the importance and possible over-value of critic reviews.
           </p>
         </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+          <a href="https://www.website.com" target="_blank">This link will open in a new tab</a>
+          <h2>Video Project</h2>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
