--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <main id="projects">
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <p class="description"> If you are confused on what you want to do after highschool, check this out.
-             <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">pizza recipes</a> I am sure this can help.</p>
+          <p class="description"> If you are confused on what you want to do after highschool, check this out.This
+             <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
           <h2>Medium Blog Post</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">10 min read</p>
@@ -41,8 +41,8 @@
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <p class="description"> Should we really listen to movie critics?
-            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">pizza recipes</a> Lets explore that idea here.</p>
+          <p class="description"> Should we really listen to movie critics? Listen to this 
+            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.</p>
           <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="description">
