--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+          <img src="partyimage.jpg" />
           <p class="description"> If you are confused on what you want to do after highschool, check this out.This
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
           <h2>Medium Blog Post</h2>
@@ -40,7 +40,7 @@
             My blog post written on the important of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
+          <img src="sharkbitez1.png" />
           <p class="description"> Should we really listen to movie critics? Listen to this 
             <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.</p>
           <h2>Podcast</h2>
