--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
           <h2>Medium Blog Post</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 min read</p>
+          <p class="mins">10 min Read</p>
           <p class="description">
             My blog post written on the important of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
@@ -45,6 +45,7 @@
             <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.</p>
           <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+          <p class="mins">15 min Listen</p>
           <p class="description">
             Group podcast project that incorporates a gameshow discussing the importance and possible over-value of critic reviews.
           </p>
@@ -80,27 +81,7 @@
           <p class="description">
             This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
         </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
       </main>
-
-      <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
-      </footer>
 
     </div>
   </body>
