--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
           <p class="description">
             This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
         </div>
+        <footer>  
+          <div> 
+            <p class="copyright">© Mohamed Tchambaz 2023</p>
+          </div>
+        </footer>
       </main>
 
     </div>
