--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -40,9 +41,13 @@
             My blog post written on the important of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
         <div class="recipe b">
-          <img src="sharkbitez1.png" />
+          <iframe width="100%" style="height:50vh" scrolling="no" frameborder="no" allow="autoplay" 
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1489546306&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+        </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+          <a href="https://soundcloud.com/jackson-medina-720519709" title="Jackson Medina" target="_blank" style="color: #cccccc; text-decoration: none;">Jackson Medina</a> · <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" 
+          title="Shark Bitez, Bite 01" target="_blank" style="color: #cccccc; text-decoration: none;">Shark Bitez, Bite 01</a></div>
           <p class="description"> Should we really listen to movie critics? Listen to this 
-            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.</p>
+            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.        </p>
           <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 min Listen</p>
@@ -51,8 +56,11 @@
           </p>
         </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <a href="https://www.website.com" target="_blank">This link will open in a new tab</a>
+          <iframe width='100%' height="315" src="https://www.youtube.com/embed/i6F-uzMVO38" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <p class="description"> Everyone loves a good show. If you are looking for one of my favorites, heres a 
+            <a href="https://youtu.be/i6F-uzMVO38" target="_blank">Video</a> that is sure to help. </p>
           <h2>Video Project</h2>
           <p class="description">
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
@@ -67,6 +75,10 @@
       <footer>  
         <div> 
           <p class="copyright">© Mohamed Tchambaz 2023</p>
+          <ul class="icons">
+            <li><a href="https://www.linkedin.com/in/mohamedtchambaz/" target="_blank"><i class="fab fa-linkedin"></a></i></li>
+            <li><a href="https://github.com/voltyyyy" target="_blank"><i class="fab fa-github"></i></a></li>
+        </ul>
         </div>
       </footer>
 
