--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
+          <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"><a class="badge-base__link LI-simple-link" 
+            href="https://www.linkedin.com/in/mohamedtchambaz?trk=profile-badge">Mohamed Tchambaz</a></div>
           <h2>LinkedIn</h2>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            Connect with me on LinkedIn</p>
         </div>
       </main>
       <footer>  
