--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
           <p class="description">
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/mohamedtchambaz?trk=profile-badge">Mohamed Tchambaz</a></div>
-              
+        <div class="recipe d">
+          <h2>LinkedIn</h2>
+          <p class="description">
+            Connect with me on LinkedIn</p>
+        </div>
       </main>
       <footer>  
         <div> 
