--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
     <script src="https://kit.fontawesome.com/17a3cef992.js" crossorigin="anonymous"></script>
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-
   </head>
 
   <body>
@@ -69,6 +68,7 @@
         </div>
         <div class="recipe d">
           <h2>LinkedIn</h2>
+          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/mohamedtchambaz?trk=profile-badge">Mohamed Tchambaz</a></div>
           <p class="description">
             Connect with me on LinkedIn</p>
         </div>
