--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
         <div class="recipe d">
-          <iframe width='100%' height="315" src="https://www.linkedin.com/in/mohamedtchambaz?trk=profile-badge" 
+          <iframe width='100%' height="315" src="https://www.linkedin.com/in/mohamedtchambaz/" 
           title="LinkedIn Profile" frameborder="0" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <h2>LinkedIn</h2>
