--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
         <div class="recipe d">
-          <div class="badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"></div>
+          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"></div>
           <h2>LinkedIn</h2>
           <p class="description">
             Connect with me on LinkedIn</p>
