--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         <div class="recipe b">
           <iframe width="100%" style="height:50vh" scrolling="no" frameborder="no" allow="autoplay" 
           src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1489546306&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-        </iframe>
-          <a href="https://soundcloud.com/jackson-medina-720519709" title="Jackson Medina" target="_blank" style="color: #cccccc; text-decoration: none;">Jackson Medina</a> · <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" 
-          title="Shark Bitez, Bite 01" target="_blank" style="color: #cccccc; text-decoration: none;">Shark Bitez, Bite 01</a></div>
+        </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+        </div>
           <p class="description"> Should we really listen to movie critics? Listen to this 
             <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.        </p>
           <h2>Podcast</h2>
