--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
         </div>
           <p class="description"> Should we really listen to movie critics? Listen to this 
-            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and explore that idea here with us.</p>
+            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and come explore that idea here with us.</p>
           <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 min Listen</p>
