--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <main id="projects">
         <div class="recipe a">
           <img src="partyimage.jpg" />
-          <p class="description"> If you are confused on what you want to do after highschool, check this out.This
+          <p class="description"> If you are confused on what you want to do after highschool, check this out. This
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
           <h2>Medium Blog Post</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
@@ -45,10 +45,9 @@
           <iframe width="100%" style="height:50vh" scrolling="no" frameborder="no" allow="autoplay" 
           src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1489546306&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
         </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-          <a href="https://soundcloud.com/jackson-medina-720519709" title="Jackson Medina" target="_blank" style="color: #cccccc; text-decoration: none;">Jackson Medina</a> · <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" 
-          title="Shark Bitez, Bite 01" target="_blank" style="color: #cccccc; text-decoration: none;">Shark Bitez, Bite 01</a></div>
+          </div>
           <p class="description"> Should we really listen to movie critics? Listen to this 
-            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and Lets explore that idea here.        </p>
+            <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and come explore that idea here with us.        </p>
           <h2>Podcast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 min Listen</p>
