--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
       </main>
       <footer>  
         <div> 
-            <p class="copyright">© Mohamed Tchambaz 2023</p>
+          <p class="copyright">© Mohamed Tchambaz 2023</p>
+          <ul class="icons">
             <li><a href="https://www.linkedin.com/in/mohamedtchambaz/" target="_blank"><i class="fab fa-linkedin"></a></i></li>
             <li><a href="https://github.com/voltyyyy" target="_blank"><i class="fab fa-github"></i></a></li>
+        </ul>
         </div>
       </footer>
 
