--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="partyimage.jpg" />
           <p class="description"> If you are confused on what you want to do after highschool, check this out. This
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
-          <h2>Medium Blog Post</h2>
+          <h2>Your 20s are going to be the most important time of your life.</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">10 min Read</p>
           <p class="description">
@@ -48,7 +48,7 @@
           </div>
           <p class="description"> Should we really listen to movie critics? Listen to this 
             <a href="https://soundcloud.com/jackson-medina-720519709/shark-bitez-bite-1" target="_blank">Podcast</a> and come explore that idea here with us.        </p>
-          <h2>Podcast</h2>
+          <h2>Shark Bitez - Bite 01</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 min Listen</p>
           <p class="description">
@@ -61,7 +61,7 @@
           clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <p class="description"> Everyone loves a good show. If you are looking for one of my favorites, heres a 
             <a href="https://youtu.be/i6F-uzMVO38" target="_blank">Video</a> that is sure to help. </p>
-          <h2>Video Project</h2>
+          <h2>The BEST historical show out right now...</h2>
           <p class="description">
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
