--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="partyimage.jpg" />
           <p class="description"> If you are confused on what you want to do after highschool, check this out. This
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
-          <h2>Your 20s are going to be the most important time of your life.</h2>
+          <h2>Your 20s are going to be the most important time of your life</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">10 min Read</p>
           <p class="description">
