--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <div class="recipe d">
           <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"></div>
           <h2>LinkedIn</h2>
-          <p class="description">
-            Connect with me on LinkedIn</p>
+          <p class="description">Connect with me on <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">LinkedIn</a>.</p>
         </div>
       </main>
       <footer>  
