--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="partyimage.jpg" />
+          <img src="partyimage.jpg" alt="People socializing at a bar."/>
           <p class="description"> If you are confused on what you want to do after highschool, check this out. This
              <a href="https://medium.com/@mtchambaz/fb7ee5f72d3e" target="_blank">Blog Post</a> is sure to help.</p>
           <h2>Your 20s are going to be the most important time of your life</h2>
