--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">10 min Read</p>
           <p class="description">
-            My blog post written on the important of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
+            My blog post is written on the importantance of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
         <div class="recipe b">
           <iframe width="100%" style="height:50vh" scrolling="no" frameborder="no" allow="autoplay" 
@@ -52,15 +52,15 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 min Listen</p>
           <p class="description">
-            Group podcast project that incorporates a gameshow discussing the importance and possible over-value of critic reviews.
+            Group podcast project that incorporates a gameshow discussing the importance, and possible over-value, of critic reviews.
           </p>
         </div>
         <div class="recipe c">
           <iframe width='100%' height="315" src="https://www.youtube.com/embed/i6F-uzMVO38" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <p class="description"> Everyone loves a good show. If you are looking for one of my favorites, heres a 
-            <a href="https://youtu.be/i6F-uzMVO38" target="_blank">Video</a> that is sure to help. </p>
+          <p class="description"> Everyone loves a good show. If you are looking for a recommendation, here is a 
+            <a href="https://youtu.be/i6F-uzMVO38" target="_blank">Video</a> about one of my favorites. </p>
           <h2>The BEST historical show out right now...</h2>
           <p class="description">
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
