--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">10 min Read</p>
           <p class="description">
-            My blog post is written on the importantance of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
+            My blog post is written on the importance of your early 20s, the intersection between being a kid and finally becoming an adult.</p>
         </div>
         <div class="recipe b">
           <iframe width="100%" style="height:50vh" scrolling="no" frameborder="no" allow="autoplay" 
