--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             Video reviewing one of my favorite shows, Kingdom, and discussing some of my favorites aspects of the show.</p>
         </div>
         <div class="recipe d">
-          <img src="officework.jpg" height = "215" alt="People working in an office."/>
+          <img src="partyimage.jpg" height = "215" alt="People working in an office."/>
           <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"></div>
           <h2>LinkedIn</h2>
           <p class="description">Connect with me on <a href="https://www.linkedin.com/in/mohamedtchambaz/" target="_blank">LinkedIn</a>.</p>
