--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </p>
         </div>
         <div class="recipe c">
-          <iframe width='100%' height="50vh" src="https://www.youtube.com/embed/i6F-uzMVO38" 
+          <iframe width='100%' style="height:50vh" src="https://www.youtube.com/embed/i6F-uzMVO38" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <p class="description"> Everyone loves a good show. If you are looking for a recommendation, here is a 
