--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <iframe width='100%' style="height:50vh" src="https://www.youtube.com/embed/i6F-uzMVO38" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <p class="description"> Everyone loves a good show. If you are looking for a recommendation, here is a 
+          <p class="description"> Everyone loves a good show, here is a 
             <a href="https://youtu.be/i6F-uzMVO38" target="_blank">Video</a> about one of my favorites. </p>
           <h2>The BEST historical show out right now...</h2>
           <p class="description">
@@ -68,8 +68,8 @@
         <div class="recipe d">
           <img src="officework.jpg" alt="People working in an office."/>
           <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="mohamedtchambaz" data-version="v1"></div>
-          <h2>LinkedIn</h2>
           <p class="description">Connect with me on <a href="https://www.linkedin.com/in/mohamedtchambaz/" target="_blank">LinkedIn</a>.</p>
+          <h2>LinkedIn</h2>
         </div>
       </main>
       <footer>  
